<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="com.example.cpu10661.customnotification.MainActivity">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_big_picture_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_big_picture_style"/>

        <RadioButton
            android:id="@+id/rb_remote_views"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/use_remote_views"/>

        <RadioButton
            android:id="@+id/rb_grid_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_grid_layout"/>

    </RadioGroup>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/ll_options"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <com.example.cpu10661.customnotification.AdjustNumberView
                android:id="@+id/anv_total_buttons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                custom:description="@string/total_buttons"
                custom:upperBound="3"
                custom:lowerBound="0" />

            <com.example.cpu10661.customnotification.AdjustNumberView
                android:id="@+id/anv_total_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                custom:description="@string/total_photos"
                custom:upperBound="100"
                custom:lowerBound="1" />

            <com.example.cpu10661.customnotification.AdjustNumberView
                android:id="@+id/anv_photos_per_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                custom:description="@string/photos_per_row"
                custom:upperBound="6"
                custom:lowerBound="1" />

            <Switch
                android:id="@+id/sw_landscape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landscape"
                android:layout_marginTop="8dp"/>

            <Switch
                android:id="@+id/sw_compact_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/compact_mode"
                android:layout_marginTop="8dp"/>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/btn_show_notifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/show_notification"/>

</LinearLayout>
